Html structure of HomePage

--- a/PizzaWebsite/Pages/Index.cshtml
+++ b/PizzaWebsite/Pages/Index.cshtml
@@ -3,8 +3,35 @@
 @{
     ViewData["Title"] = "Home page";
 }
-
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<h1>Welcome to PizzaOnline.uz!</h1>
+<div class="add-banner">
+    <figure>
+        <img class="pizza-banner" src="~/img/pizza-banner-none.jpg"/>
+    </figure>
 </div>
+<div class ="facts">
+    <sector>
+        <h2>Доставка пиццы</h2>
+        <article>
+            <p>
+                Круглосуточный заказ и доставка пиццы на дом по городу - pizzaonline.uz. Заказать вкусное итальянское блюдо — пиццу с доставкой легко.
+
+                Перечень пиццерий, занимающихся ее приготовлением, представлен на страницах нашего сайта pizzaonline.uz.
+
+                Мы собрали полную информацию о заведениях для легкого поиска и заказа еды на дом, в офис или в любое другое место.
+
+                Информация о стоимости доставки времени и пр. помогает быстро выбрать кафе или ресторан.
+
+                Оформить заказ и бесплатную доставку пиццы в Баку можно онлайн, позвонив по телефону или через наше приложение.
+            </p>
+        </article>
+    </sector>
+    <sector>
+        <h2>Где мы берем ингредиенты?</h2>
+        <article>
+            <p>У нас в блюдах используются только самые ГМОшные и искусственно выращенные в специальных лабараториях овощи чтобы вы могли испытать наслаждения от пиздец вкусной пиццы в любой сезон даже если это ёбанные помидоры зимой не растут!
+                Мясо мы скупаем просроченное оптом или закупаемся в самых дешманских магазах дабы не ударить по вашему кошельку! Всё для вас !</p>
+        </article>
+    </sector>
+</div >
+ 
