--- a/PizzaWebsite/wwwroot/css/site.css
+++ b/PizzaWebsite/wwwroot/css/site.css
@@ -16,3 +16,13 @@ html {
 body {
   margin-bottom: 60px;
 }
+/*
+.display-4{
+    font-family: serif;
+    font-weight:900;
+}
+
+.pizza-banner{
+    height:500px;
+}
+    */
