--- a/PizzaWebsite/Pages/Menu.cshtml
+++ b/PizzaWebsite/Pages/Menu.cshtml
@@ -9,11 +9,11 @@
    <nav>
        <ul class="menu-list">
             @{
-                for (int i = 0; i < 10; i++) 
-                {
-                        <li>
-                            <a><img src="~/img/Pizza.png" /></a>
-                        </li>
+                foreach (var pizza in Model.Pizzas)
+                {                    
+                    <li>
+                        <a><img src="~/img/pizza-images/@pizza.ImageLocation" /></a>
+                    </li>
                 }
             }
        </ul>
