--- a/PizzaWebsite/Pages/Index.cshtml
+++ b/PizzaWebsite/Pages/Index.cshtml
@@ -3,7 +3,9 @@
 @{
     ViewData["Title"] = "Home page";
 }
-<h1>Welcome to PizzaOnline.uz!</h1>
+
+
+<h1 class ="websiteh1">Welcome to PizzaOnline.uz!</h1>
 <div class="add-banner">
     <figure>
         <img class="pizza-banner" src="~/img/pizza-banner-none.jpg"/>
@@ -29,7 +31,7 @@
     <sector>
         <h2>Где мы берем ингредиенты?</h2>
         <article>
-            <p>У нас в блюдах используются только самые ГМОшные и искусственно выращенные в специальных лабараториях овощи чтобы вы могли испытать наслаждения от пиздец вкусной пиццы в любой сезон даже если это ёбанные помидоры зимой не растут!
+            <p>У нас в блюдах используются только самые ГМОшные и искусственно выращенные в специальных лабораториях овощи чтобы вы могли испытать наслаждения от пиздец вкусной пиццы в любой сезон даже если эти ёбанные помидоры зимой не растут!
                 Мясо мы скупаем просроченное оптом или закупаемся в самых дешманских магазах дабы не ударить по вашему кошельку! Всё для вас !</p>
         </article>
     </sector>
