--- a/PizzaWebsite/Pages/Index.cshtml
+++ b/PizzaWebsite/Pages/Index.cshtml
@@ -5,12 +5,32 @@
 }
 
 
-<h1 class ="websiteh1">Welcome to PizzaOnline.uz!</h1>
-<div class="add-banner">
-    <figure>
-        <img class="pizza-banner" src="~/img/pizza-banner-none.jpg"/>
-    </figure>
-</div>
+
+<main>
+    <div class="carousel slide" id="carouselControls" data-bs-ride="carousel">
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img class"d-block w-100" src="https://staticy.dominospizza.ru/api/medium/Banner/Web/589/NULL/NULL/RU" />
+            </div>
+            <div class="carousel-item">
+                <img class"d-block w-100" src="~/img/pizza-banner-none.jpg" />
+            </div>
+            <div class="carousel-item">
+                <img class"d-block w-100" src="https://staticy.dominospizza.ru/api/medium/Banner/Web/463/NULL/NULL/RU" />
+            </div>
+        </div>
+
+        <a class="carousel-control-prev" role="button" href="#carouselControls" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon"></span>
+        </a>
+
+        <a class="carousel-control-next" role="button" href="#carouselControls" data-bs-slide="next">
+            <span class="carousel-control-next-icon"></span>
+        </a>
+    </div>
+</main>
+
+
 <div class ="facts">
     <sector>
         <h2>Доставка пиццы</h2>
