--- a/PizzaWebsite/Pages/Menu.cshtml
+++ b/PizzaWebsite/Pages/Menu.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Menu";
 }
 
-<h1 class="websiteh1">Our Menu</h1>
+<h1>Our Menu</h1>
 <div>
    <nav>
        <ul class="menu-list">
