--- a/PizzaWebsite/Pages/CreatePizza.cshtml
+++ b/PizzaWebsite/Pages/CreatePizza.cshtml
@@ -44,5 +44,6 @@
     <div asp-validation-summary="ModelOnly">
         <span>Please correct the following errors</span>
     </div>
-    <input asp-page-handler="Upload" class="btn" type="submit" value="Upload" />
+    <input asp-page-handler="Upload" class="btn btn-outline-dark" type="submit" value="Upload" />
+
 </form>
