--- a/PizzaWebsite/Pages/Shared/_Layout.cshtml
+++ b/PizzaWebsite/Pages/Shared/_Layout.cshtml
@@ -1,5 +1,10 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
+
+@using Microsoft.AspNetCore.Identity
+@inject SignInManager<ApplicationUser> SignInManager
+@inject UserManager<ApplicationUser> UserManager
+
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -26,10 +31,25 @@
                         <li class="nav-item">
                             <a class="nav-link text-light" asp-page="/Menu">Menu</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-light" asp-page="/CreatePizza">Create Pizza</a>
-                        </li>
+                        @{
+                            if(SignInManager.Context.User.HasClaim("Admin", "true"))
+                            {
+                                <li class="nav-item">
+                                    <a class="nav-link text-light" asp-page="/CreatePizza">Create Pizza</a>
+                                </li>
+                            }
+                        }
                     </ul>
+                    @{
+                        if(SignInManager.Context.User.HasClaim("Admin", "true"))
+                        {
+                            <ul class="navbar-nav flex-grow-1">
+                                <li class="nav-item">
+                                    <a class="nav-link text-light" asp-page="/ManageAdmins">Manage Admins</a>
+                                </li>
+                            </ul>
+                        }
+                    }
                     <partial name="_LoginPartial" />
                 </div>
             </div>
