--- a/PizzaWebsite/Areas/Identity/Pages/Account/Login.cshtml
+++ b/PizzaWebsite/Areas/Identity/Pages/Account/Login.cshtml
@@ -16,7 +16,7 @@
                 <div class="form-floating mb-3">
                     <input asp-for="Input.Email" class="form-control" autocomplete="username" aria-required="true" placeholder="name@example.com" />
                     <label asp-for="Input.Email" class="form-label"></label>
-                    <span asp-validation-for="Input.Email" class="text-danger is-invalid"></span>
+                    <span asp-validation-for="Input.Email" class="text-danger"></span>
                 </div>
                 <div class="form-floating mb-3">
                     <input asp-for="Input.Password" class="form-control" autocomplete="current-password" aria-required="true" placeholder="Password" />
