--- a/PizzaWebsite/Pages/Index.cshtml
+++ b/PizzaWebsite/Pages/Index.cshtml
@@ -7,13 +7,13 @@
 
 
 <main>
-    <div class="carousel slide" id="carouselControls" data-bs-ride="carousel">
+    <div class="carousel slide mb-5" id="carouselControls" data-bs-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active">
                 <img class"d-block w-100" src="https://staticy.dominospizza.ru/api/medium/Banner/Web/589/NULL/NULL/RU" />
             </div>
             <div class="carousel-item">
-                <img class"d-block w-100" src="~/img/pizza-banner-none.jpg" />
+                <img class"d-block w-100" src="https://staticy.dominospizza.ru/api/medium/Banner/Web/585/NULL/NULL/RU" />
             </div>
             <div class="carousel-item">
                 <img class"d-block w-100" src="https://staticy.dominospizza.ru/api/medium/Banner/Web/463/NULL/NULL/RU" />
@@ -51,8 +51,11 @@
     <sector>
         <h2>Где мы берем ингредиенты?</h2>
         <article>
-            <p>У нас в блюдах используются только самые ГМОшные и искусственно выращенные в специальных лабораториях овощи чтобы вы могли испытать наслаждения от пиздец вкусной пиццы в любой сезон даже если эти ёбанные помидоры зимой не растут!
-                Мясо мы скупаем просроченное оптом или закупаемся в самых дешманских магазах дабы не ударить по вашему кошельку! Всё для вас !</p>
+            <p>
+                Биотехнологические ингредиенты «выращиваются» или с использованием микроорганизмов, или - специальных биотехнологических процессов: так получаются, например, шиконин - из калусной культуры клеток воробейника краснокорневого, экстракт биомассы женьшеня. С непосредственным использованием микроорганизмов производят наши витамины: β-каротин и витамин С. Такие компоненты, конечно, абсолютно свободны от сельскохозяйственных загрязнителей. Вообще, найти на карте незагрязненные пестицидами зоны – не такая простая задача. Хотя мы и отслеживаем цепочки производства наших ингредиентов.
+
+                Натуральное сырье в основном выращивается (гораздо реже - собираются дикоросы) на экологически чистых территориях. Вот некоторые примеры: черника – карельская, мумие – алтайское, расторопша – тоже родная, приволжская, а вот алоэ – из Грузии. Некоторые ингредиенты едут к нам из стран Европы.
+            </p>
         </article>
     </sector>
 </div >
