--- a/PizzaWebsite/Pages/Index.cshtml
+++ b/PizzaWebsite/Pages/Index.cshtml
@@ -6,14 +6,14 @@
 
 
 
-<main>
+<main id="bgc">
     <div class="carousel slide mb-5" id="carouselControls" data-bs-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active">
                 <img class"d-block w-100" src="https://staticy.dominospizza.ru/api/medium/Banner/Web/589/NULL/NULL/RU" />
             </div>
             <div class="carousel-item">
-                <img class"d-block w-100" src="https://staticy.dominospizza.ru/api/medium/Banner/Web/585/NULL/NULL/RU" />
+                <img class"d-block w-100" src="~/img/pbanner1.jpg" />
             </div>
             <div class="carousel-item">
                 <img class"d-block w-100" src="https://staticy.dominospizza.ru/api/medium/Banner/Web/463/NULL/NULL/RU" />
@@ -31,30 +31,28 @@
 </main>
 
 
+<div class="row">
+    <div class="column">
+        <img class="" src="~/img/Pizza.png"/>
+        <button class="w-25 mb-2 btn btn-lg btn-outline-danger">Order</button>
+    </div>
+
+</div>
+
+
 <div class ="facts">
     <sector>
-        <h2>Доставка пиццы</h2>
+        <h2>Pizza delivery</h2>
         <article>
             <p>
-                Круглосуточный заказ и доставка пиццы на дом по городу - pizzaonline.uz. Заказать вкусное итальянское блюдо — пиццу с доставкой легко.
-
-                Перечень пиццерий, занимающихся ее приготовлением, представлен на страницах нашего сайта pizzaonline.uz.
-
-                Мы собрали полную информацию о заведениях для легкого поиска и заказа еды на дом, в офис или в любое другое место.
-
-                Информация о стоимости доставки времени и пр. помогает быстро выбрать кафе или ресторан.
-
-                Оформить заказ и бесплатную доставку пиццы в Баку можно онлайн, позвонив по телефону или через наше приложение.
-            </p>
+                Round-the-clock ordering and delivery of pizza to your home in the city - pizzaonline.uz. Ordering a delicious Italian dish - pizza with delivery is easy. The list of pizzerias involved in its preparation is presented on the pages of our website pizzaonline.uz. We have collected complete information about establishments for easy search and ordering food to your home, office or any other place. Information about the cost of delivery, time, etc. helps you quickly choose a cafe or restaurant. You can place an order and free delivery of pizza in Baku online by calling or through our application.
         </article>
     </sector>
     <sector>
-        <h2>Где мы берем ингредиенты?</h2>
+        <h2>Where do we get the ingredients?</h2>
         <article>
             <p>
-                Биотехнологические ингредиенты «выращиваются» или с использованием микроорганизмов, или - специальных биотехнологических процессов: так получаются, например, шиконин - из калусной культуры клеток воробейника краснокорневого, экстракт биомассы женьшеня. С непосредственным использованием микроорганизмов производят наши витамины: β-каротин и витамин С. Такие компоненты, конечно, абсолютно свободны от сельскохозяйственных загрязнителей. Вообще, найти на карте незагрязненные пестицидами зоны – не такая простая задача. Хотя мы и отслеживаем цепочки производства наших ингредиентов.
-
-                Натуральное сырье в основном выращивается (гораздо реже - собираются дикоросы) на экологически чистых территориях. Вот некоторые примеры: черника – карельская, мумие – алтайское, расторопша – тоже родная, приволжская, а вот алоэ – из Грузии. Некоторые ингредиенты едут к нам из стран Европы.
+                Biotechnological ingredients are "grown" either using microorganisms, or - special biotechnological processes: for example, shikonin is obtained from the calus culture of red-root sparrow cells, an extract of ginseng biomass. With the direct use of microorganisms, our vitamins are produced: β-carotene and vitamin C. Such components, of course, are absolutely free from agricultural pollutants. In general, finding areas that are not contaminated with pesticides on the map is not such an easy task. Although we track the production chains of our ingredients. Natural raw materials are mainly grown (much less often - wild plants are collected) in environmentally friendly areas. Here are some examples: blueberry - Karelian, mummy - Altai, thistle - also native, Volga, but aloe - from Georgia. Some ingredients come to us from European countries.
             </p>
         </article>
     </sector>
