--- a/PizzaWebsite/Areas/Identity/Pages/Account/Login.cshtml
+++ b/PizzaWebsite/Areas/Identity/Pages/Account/Login.cshtml
@@ -5,8 +5,9 @@
     ViewData["Title"] = "Log in";
 }
 
-<h1>@ViewData["Title"]</h1>
-<div class="row">
+
+<div id="log" class="row">
+    <h1>@ViewData["Title"]</h1>
     <div class="col-md-4">
         <section>
             <form id="account" method="post">
@@ -32,7 +33,7 @@
                     </div>
                 </div>
                 <div>
-                    <button id="login-submit" type="submit" class="w-100 btn btn-lg btn-outline-dark mb-3">Log in</button>
+                    <button id="login-submit" type="submit" class="w-100 btn btn-lg btn-outline-danger mb-3">Log in</button>
                 </div>
                 <div>
                     <p>
