--- a/PizzaWebsite/Areas/Identity/Pages/Account/Register.cshtml
+++ b/PizzaWebsite/Areas/Identity/Pages/Account/Register.cshtml
@@ -4,9 +4,10 @@
     ViewData["Title"] = "Register";
 }
 
-<h1>@ViewData["Title"]</h1>
 
-<div class="row">
+
+<div id="reg" class="row">
+    <h1>@ViewData["Title"]</h1>
     <div class="col-md-4">
         <form id="registerForm" asp-route-returnUrl="@Model.ReturnUrl" method="post">
             <h2>Create a new account.</h2>
@@ -27,7 +28,7 @@
                 <label asp-for="Input.ConfirmPassword"></label>
                 <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
             </div>
-            <button id="registerSubmit" type="submit" class="w-100 btn btn-lg btn-outline-dark">Register</button>
+            <button id="registerSubmit" type="submit" class="w-100 btn btn-lg btn-outline-danger">Register</button>
         </form>
     </div>
     <div class="col-md-6 col-md-offset-2">
