--- a/PizzaWebsite/Pages/Shared/_Layout.cshtml
+++ b/PizzaWebsite/Pages/Shared/_Layout.cshtml
@@ -14,11 +14,11 @@
     <link rel="stylesheet" href="~/PizzaWebsite.styles.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/Menu.cshtml.css" asp-append-version="true" />
 </head>
-<body style="height:5000px">
+<body style="height:1500px;">
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark border-bottom box-shadow mb-3 fixed-top">
+        <nav style=" background-color:#ad2122;" class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark box-shadow mb-3 fixed-top">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-page="/Index">PizzaWebsite</a>
+                <a class="navbar-brand" asp-area="" asp-page="/Index"><img class="pb-100" id="startIcon" src="~/img/Icon.png"/></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -34,20 +34,20 @@
                         @{
                             if(SignInManager.Context.User.HasClaim("Admin", "true"))
                             {
-                                <li class="nav-item">
-                                    <a class="nav-link text-light" asp-page="/CreatePizza">Create Pizza</a>
-                                </li>
+                                        <li class="nav-item">
+                                            <a class="nav-link text-light" asp-page="/CreatePizza">Create Pizza</a>
+                                        </li>
                             }
                         }
                     </ul>
                     @{
                         if(SignInManager.Context.User.HasClaim("Admin", "true"))
                         {
-                            <ul class="navbar-nav flex-grow-1">
-                                <li class="nav-item">
-                                    <a class="nav-link text-light" asp-page="/ManageAdmins">Manage Admins</a>
-                                </li>
-                            </ul>
+                                    <ul class="navbar-nav flex-grow-1">
+                                        <li class="nav-item">
+                                            <a class="nav-link text-light" asp-page="/ManageAdmins">Manage Admins</a>
+                                        </li>
+                                    </ul>
                         }
                     }
                     <partial name="_LoginPartial" />
@@ -56,7 +56,7 @@
         </nav>
     </header>
     <div class="container">
-        <main role="main" class="pb-3">
+        <main id="originID" role="main" class="pb-3">
             @RenderBody()
         </main>
     </div>
