--- a/PizzaWebsite/Pages/Index.cshtml
+++ b/PizzaWebsite/Pages/Index.cshtml
@@ -5,7 +5,7 @@
 }
 
 
-
+<!--
 <main id="bgc">
     <div class="carousel slide mb-5" id="carouselControls" data-bs-ride="carousel">
         <div class="carousel-inner">
@@ -25,12 +25,28 @@
         </a>
 
         <a class="carousel-control-next" role="button" href="#carouselControls" data-bs-slide="next">
-            <span class="carousel-control-next-icon"></span>
+            <span class="carousel-control-next-icon"></span>                                      
         </a>
     </div>
 </main>
 
+-->
 
+<div class="slider-wrap">
+    <div class="slider">
+        <img src="~/img/pbanner1.jpg" alt="" />
+        <img src="~/img/pbanner1.jpg" alt="" />
+        <img src="~/img/pbanner1.jpg" alt="" />
+        <img src="~/img/pbanner1.jpg" alt="" />
+    </div>
+</div>
+
+<button class="button slide-prev"><</button>
+<button class="button slide-next">></button>
+
+
+
+<!--
 <div class="row">
     <div class="column">
         <img class="" src="~/img/Pizza.png"/>
@@ -38,7 +54,7 @@
     </div>
 
 </div>
-
+-->
 
 <div class ="facts">
     <sector>
