--- a/PizzaWebsite/Pages/Shared/_Layout.cshtml
+++ b/PizzaWebsite/Pages/Shared/_Layout.cshtml
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="~/PizzaWebsite.styles.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/Menu.cshtml.css" asp-append-version="true" />
 </head>
-<body style="height:1500px;">
+<body>
     <header>
         <nav style=" background-color:#ad2122;" class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark box-shadow mb-3 fixed-top">
             <div class="container">
