--- a/PizzaWebsite/Pages/Index.cshtml
+++ b/PizzaWebsite/Pages/Index.cshtml
@@ -57,8 +57,17 @@
                 <img src="~/img/Pizza.png" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">Summer set</h5>
-                    <p class="card-text">Pizza + Coca cola + French fries only for 12.99!</p>
-                    <a href="#" class="btn btn-outline-danger">Order</a>
+                    <p class="card-text">Pizza + Coca cola + French fries</p>
+                    <div class="row mt-5 mb-2">
+                        <div class="col-md-6">
+                            <a href="#" class="btn btn-outline-danger">Choose</a>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="price"><h6>from 12.99 $</h6></div>
+                        </div>
+                    </div>
+                    
+                    
                 </div>
             </div>
         </div>
@@ -68,7 +77,14 @@
                 <div class="card-body">
                     <h5 class="card-title">Offer</h5>
                     <p class="card-text">Offer body</p>
-                    <a href="#" class="btn btn-outline-danger">Order</a>
+                    <div class="row mt-5 mb-2">
+                        <div class="col-md-6">
+                            <a href="#" class="btn btn-outline-danger">Choose</a>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="price"><h6>from 12.99 $</h6></div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -78,7 +94,14 @@
                 <div class="card-body">
                     <h5 class="card-title">Offer</h5>
                     <p class="card-text">Offer body.</p>
-                    <a href="#" class="btn btn-outline-danger">Order</a>
+                    <div class="row mt-5 mb-2">
+                        <div class="col-md-6">
+                            <a href="#" class="btn btn-outline-danger">Choose</a>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="price"><h6>from 12.99 $</h6></div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -88,7 +111,14 @@
                 <div class="card-body">
                     <h5 class="card-title">Offer</h5>
                     <p class="card-text">Offer body.</p>
-                    <a href="#" class="btn btn-outline-danger">Order</a>
+                    <div class="row mt-5 mb-2">
+                        <div class="col-md-6">
+                            <a href="#" class="btn btn-outline-danger">Choose</a>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="price"><h6>from 12.99 $</h6></div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -150,14 +180,14 @@
 -->
 <div class ="container facts">
     <div class="row">
-        <div class="col-md-4 col-sm-12 text-center">
+        <div class="col-md-4 col-sm-12">
             <h2>Pizza delivery</h2>
             <article>
                 <p>
                     Round-the-clock ordering and delivery of pizza to your home in the city - pizzaonline.uz. Ordering a delicious Italian dish - pizza with delivery is easy. The list of pizzerias involved in its preparation is presented on the pages of our website pizzaonline.uz. We have collected complete information about establishments for easy search and ordering food to your home, office or any other place. Information about the cost of delivery, time, etc. helps you quickly choose a cafe or restaurant. You can place an order and free delivery of pizza in Baku online by calling or through our application.
             </article>
         </div>
-        <div class="col-md-8 col-sm-12 text-center">
+        <div class="col-md-8 col-sm-12">
             <h2>Where do we get the ingredients?</h2>
             <article>
                 <p>
