--- a/PizzaWebsite/Pages/Shared/_Layout.cshtml
+++ b/PizzaWebsite/Pages/Shared/_Layout.cshtml
@@ -63,7 +63,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2022 - PizzaWebsite - <a asp-area="" asp-page="/Privacy">Privacy</a>
+            &copy; 2022 - PizzaWebsite
         </div>
     </footer>
 
