--- a/PizzaWebsite/Pages/Index.cshtml
+++ b/PizzaWebsite/Pages/Index.cshtml
@@ -63,10 +63,10 @@
                             <p class="card-text">@pizza.Ingredients</p>
                             <div class="row mt-5 mb-2">
                                 <div class="col-md-6">
-                                    <a asp-page="/ViewPizza" asp-route-id="@pizza.PizzaId" class="btn btn-outline-danger">Choose</a>
+                                    <a asp-page="/ViewPizza" asp-route-id="@pizza.PizzaId" class="btn rbtn  btn-outline-danger btn-lg">Choose</a>
                                 </div>
                                 <div class="col-md-6">
-                                    <div class="price"><h6>@pizza.Price $</h6></div>
+                                    <div class="price my-4"><h6>@pizza.Price $</h6></div>
                                 </div>
                             </div>
                         </div>
@@ -78,8 +78,7 @@
         <p p-0>See more in <a asp-page="/Menu">Menu</a></p>
     </div>
 </div>
-
-
+</div>
 
 <!--
 
