--- a/PizzaWebsite/Pages/Shared/_Layout.cshtml
+++ b/PizzaWebsite/Pages/Shared/_Layout.cshtml
@@ -15,8 +15,41 @@
     <link rel="stylesheet" href="~/Menu.cshtml.css" asp-append-version="true" />
 </head>
 <body>
-    <header>
-        <nav style=" background-color:#ad2122;" class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark box-shadow mb-3 fixed-top">
+    <nav style=" background-color:maroon;" class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark box-shadow ">
+        <div class="container">
+            <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
+                <ul class="navbar-nav flex-grow-1">
+                    <li class="nav-item">
+                        <a class="nav-link text-light" asp-area="" asp-page="/Index">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-light" asp-page="/Menu">Menu</a>
+                    </li>
+                    @{
+                        if (SignInManager.Context.User.HasClaim("Admin", "true"))
+                        {
+                                <li class="nav-item">
+                                    <a class="nav-link text-light" asp-page="/CreatePizza">Create Pizza</a>
+                                </li>
+                        }
+                    }
+                </ul>
+                @{
+                    if (SignInManager.Context.User.HasClaim("Admin", "true"))
+                    {
+                            <ul class="navbar-nav flex-grow-1">
+                                <li class="nav-item">
+                                    <a class="nav-link text-light" asp-page="/ManageAdmins">Manage Admins</a>
+                                </li>
+                            </ul>
+                    }
+                }
+                <partial name="_LoginPartial" />
+            </div>
+        </div>
+    </nav>
+    <header class="sticky-top">
+        <nav style=" background-color:#ad2122;" class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark box-shadow">
             <div class="container">
                 <a class="navbar-brand" asp-area="" asp-page="/Index"><img class="pb-100" id="startIcon" src="~/img/Icon.png"/></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
@@ -34,20 +67,20 @@
                         @{
                             if(SignInManager.Context.User.HasClaim("Admin", "true"))
                             {
-                                        <li class="nav-item">
-                                            <a class="nav-link text-light" asp-page="/CreatePizza">Create Pizza</a>
-                                        </li>
+                                            <li class="nav-item">
+                                                <a class="nav-link text-light" asp-page="/CreatePizza">Create Pizza</a>
+                                            </li>
                             }
                         }
                     </ul>
                     @{
                         if(SignInManager.Context.User.HasClaim("Admin", "true"))
                         {
-                                    <ul class="navbar-nav flex-grow-1">
-                                        <li class="nav-item">
-                                            <a class="nav-link text-light" asp-page="/ManageAdmins">Manage Admins</a>
-                                        </li>
-                                    </ul>
+                                        <ul class="navbar-nav flex-grow-1">
+                                            <li class="nav-item">
+                                                <a class="nav-link text-light" asp-page="/ManageAdmins">Manage Admins</a>
+                                            </li>
+                                        </ul>
                         }
                     }
                     <partial name="_LoginPartial" />
@@ -63,7 +96,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2022 - PizzaWebsite
+            &copy; 2022 - PizzaWebsite - <a asp-page="/Privacy">Privacy</a>
         </div>
     </footer>
 
